--- a/CryptoLabs/CryptoLabs/CryptoLabs.csproj
+++ b/CryptoLabs/CryptoLabs/CryptoLabs.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Hashing\" />
+  </ItemGroup>
+
 </Project>
